# arxiv-recommender

./: .gitignore  README.md
.github/workflows/: ci.yml
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: error.tsx  globals.css  layout.tsx
frontend/src/components/: AlgoColumn.tsx  AppHeader.tsx  Dashboard.tsx  KpiCard.tsx  KpiRow.tsx  Leaderboard.tsx  Panel.tsx  RecCard.tsx  SearchBar.tsx  SeedCard.tsx  ThemeToggle.tsx  icons.tsx
frontend/src/lib/: algorithms.ts  api.ts  format.ts  leaderboard.ts  theme.ts
platform/: .env.example  .gitignore  README.md  pyproject.toml
platform/arxrec/: __init__.py  config.py  train.py
platform/arxrec/algo/: __init__.py  als_citation.py  base.py  content_neural.py  content_tfidf.py  hybrid.py  popularity.py
platform/arxrec/analysis/: __init__.py  collect.py  stats.py
platform/arxrec/api/: index.py  main.py
platform/arxrec/data/: dataset.py  loader.py  openalex.py
platform/arxrec/db/: schema.sql
platform/arxrec/eval/: __init__.py  metrics.py  runner.py  significance.py  tune_weights.py
platform/arxrec/utils/: logging.py  seed.py
platform/deploy/: README.md  setup-database.sh
platform/deploy/nginx/: api.papers.scottcampbell.io.conf
platform/deploy/systemd/: arxrec-api.service  arxrec-refresh.service  arxrec-refresh.timer
platform/docs/analysis/: recommender-evaluation.md
platform/docs/analysis/data/: behavioral_sample.json  derived_stats.json  eval_metric.csv  leaderboard_offline.json  tuning_report.json
platform/scripts/: run_analysis.py  screenshot.py  tune_and_report.py
platform/tests/: test_algorithms.py  test_analysis.py  test_metrics.py  test_openalex.py  test_significance.py  test_tune_weights.py
