[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxrec"
version = "0.1.0"
description = "Hybrid arXiv paper recommender on OpenAlex data, content embeddings + citation graph"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Scott Campbell", email = "scottcampbell8@icloud.com"}]
license = {text = "MIT"}

dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.13,<2",
  "scikit-learn>=1.5,<2",
  "implicit>=0.7.2,<1",
  "faiss-cpu>=1.8,<2",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1",
  "tqdm>=4.66,<5.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
# The neural tower (sentence-transformers + torch) is optional. The hybrid
# recommender runs without it via a zero-weight dummy (train with --skip-neural).
# Torch has no wheels for Python 3.14, so these are kept out of the default install.
neural = [
  "torch>=2.3",
  "sentence-transformers>=2.7",
]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.5.0,<0.8.0",
  "mypy>=1.10,<1.14",
  "types-requests",
  "playwright>=1.45,<1.50",
]

[tool.setuptools.packages.find]
include = ["arxrec*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B017", "S101"]
"scripts/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["slow: slow tests", "integration: requires Postgres"]
