[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxrec"
version = "0.1.0"
description = "Hybrid arXiv paper recommender on OpenAlex data, content embeddings + citation graph"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Scott Campbell", email = "scottcampbell8@icloud.com"}]
license = {text = "MIT"}

dependencies = [
  "numpy>=1.26,<2.3",
  "pandas>=2.2,<2.4",
  "scipy>=1.13,<1.15",
  "scikit-learn>=1.5,<1.7",
  "implicit>=0.7.2,<0.8",
  "torch>=2.3,<2.6",
  "faiss-cpu>=1.8,<1.10",
  "sentence-transformers>=2.7,<3.5",
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.33",
  "pydantic>=2.7,<2.10",
  "psycopg[binary,pool]>=3.2,<3.3",
  "sqlalchemy>=2.0,<2.1",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<0.29",
  "tqdm>=4.66,<5.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8,<4.0",
]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.5.0,<0.8.0",
  "mypy>=1.10,<1.14",
  "types-requests",
  "playwright>=1.45,<1.50",
]

[tool.setuptools.packages.find]
include = ["arxrec*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B017", "S101"]
"scripts/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["slow: slow tests", "integration: requires Postgres"]
